# WebrtcSdk

./: .gitignore  CmakeLists.txt
examples/: CmakeLists.txt
examples/windows/: CMakeLists.txt
examples/windows/resources/themes/default/: global.xml
examples/windows/resources/themes/default/basic/: basic.xml
examples/windows/src/: basic_form.cpp  basic_form.h  main.cpp  main.h  stdafx.h  targetver.h  ui_wnd.cpp  ui_wnd.h  video_wnd.cpp  video_wnd.h
xrtc/: CmakeLists.txt  xrtc.cpp  xrtc.h
xrtc/base/: xrtc_global.cpp  xrtc_global.h  xrtc_http.cpp  xrtc_http.h  xrtc_json.cpp  xrtc_json.h  xrtc_utils.cpp  xrtc_utils.h
xrtc/device/: cam_impl.cpp  cam_impl.h  mic_impl.cpp  mic_impl.h  xrtc_render.cpp  xrtc_render.h
xrtc/media/: media_frame.h
xrtc/media/base/: base_pin.cpp  base_pin.h  in_pin.cpp  in_pin.h  media_chain.cpp  media_chain.h  media_frame.h  out_pin.cpp  out_pin.h  xrtc_pusher.cpp  xrtc_pusher.h
xrtc/media/chain/: xrtc_preview.cpp  xrtc_preview.h  xrtc_push_stream.cpp  xrtc_push_stream.h
xrtc/media/filter/: audio_processing_filter.cpp  audio_processing_filter.h  opus_encoder_filter.cpp  opus_encoder_filter.h  x264_encoder_filter.cpp  x264_encoder_filter.h
xrtc/media/sink/: d3d9_render_sink.cpp  d3d9_render_sink.h  xrtc_media_sink.cpp  xrtc_media_sink.h
xrtc/media/source/: xrtc_audio_source.cpp  xrtc_audio_source.h  xrtc_video_source.cpp  xrtc_video_source.h
xrtc/rtc/audio/: audio_send_stream.cpp  audio_send_stream.h  audio_send_stream_config.h
xrtc/rtc/pc/: code_info.h  network_controller.h  peer_connection.cpp  peer_connection.h  (+8 more)
(+62 files in other folders)
